# ai-patch-risk-checker

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: ai-patch-risk.json  auth-without-tests.diff
src/ai_patch_risk_checker/: __init__.py  baseline.py  cli.py  config.py  diff_parser.py  models.py  remediation.py  report.py  rules.py
tests/: test_baseline.py  test_cli.py  test_diff_parser.py  test_report.py  test_rules.py
